fix(nav): fix z-index

--- a/styles.less
+++ b/styles.less
@@ -93,7 +93,6 @@
         background-color: #393f44;
         width: 100%;
         height: 100%;
-        z-index: 9;
         input[type='radio'] {
           position: absolute;
           z-index: 1000;
@@ -144,7 +143,7 @@
           background-color: #4d5258;
           color: #ffffff;
           width: 250px;
-          z-index: 5;
+          z-index: -1;
           height: 100%;
           >div {
             position: absolute;
